--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 
+# datasource uses a URL along with username/password credentials to establish the database connection
+spring.datasource.url=jdbc:mysql://localhost:8080/bank_db
+
+# to set users name in database
+spring.datasource.username=root
+
+# to set password
+spring.datasource.password=Banana_029
+
+# automatically validates or exports schema DDL to the database when the SessionFactory is created (possible values: validate, update, create, create-drop)
+spring.jpa.hibernate.ddl-auto=create-drop
+
+#show_sql to true tells hibernate to Write all SQL statements to console
+spring.jpa.properties.hibernate.show_sql=true
+
+# to set on which port application runs
+server.port: 8000
