port for dtb and dtb to Postgres changed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 # datasource uses a URL along with username/password credentials to establish the database connection
-spring.datasource.url=jdbc:mysql://localhost:8080/bank_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/bank_db
 
 # to set users name in database
 spring.datasource.username=root
