--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>WhateverAppMaven</name>
 	<description>Demo project for Spring Boot and other stuff</description>
+	<!-- define the packaging type -->
+	<packaging>jar</packaging>
 	<properties>
 		<java.version>11</java.version>
 		<kotlin.version>1.6.21</kotlin.version>
@@ -75,6 +77,7 @@
 	<build>
 		<sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
 		<testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
+		<finalName>whateverappmaven</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
