--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 # datasource uses a URL along with username/password credentials to establish the database connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/bank_db
+spring.datasource.url=jdbc:postgresql://postgres-db:5432/bank_db
 
 # to set users name in database
 spring.datasource.username=root
@@ -9,7 +9,7 @@ spring.datasource.username=root
 spring.datasource.password=Banana_029
 
 # automatically validates or exports schema DDL to the database when the SessionFactory is created (possible values: validate, update, create, create-drop)
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 #show_sql to true tells hibernate to Write all SQL statements to console
 spring.jpa.properties.hibernate.show_sql=true
